<resources>
    <string name="app_name">Fitness</string>
    <string name="sign_in">Sign In</string>
    <string name="workout_categories">Workout Categories</string>
    <string name="advance">Advance</string>
    <string name="begineers">Begineers</string>
    <string name="recomendance">Recomendance</string>
    <string name="todo">TODO</string>
    <string name="wake_up_call">Wake Up Call</string>
    <string name="drill_essentials">Drill Essentials</string>
    <string name="full_body_goal_crusher">Full Body Goal Crusher</string>
    <string name="lower_body_strength">Lower Body Strength</string>
    <string name="diet_plan">Diet Plan</string>
    <string name="breakfast">Breakfast</string>
    <string name="dinner">Dinner</string>
    <string name="lunch">Lunch</string>
    <string name="waffles">Waffles</string>
    <string name="fruits_salad">Fruits Salad</string>
    <string name="oatmeal">Oatmeal</string>
    <string name="bread_and_tea">Bread and Tea</string>
    <string name="pancakes">Pancakes</string>
    <string name="cornflakes">Cornflakes</string>
    <string name="welcome_to">Welcome to</string>
    <string name="body_goals_workout">BODY GOALS WORKOUT</string>
    <string name="achieve_your_body_goals_with_us">Achieve your body goals with us</string>
    <string name="get_started">Get Started</string>
    <string name="hello">Hello</string>
    <string name="let_s_start_your_day">Let\'s start your day</string>
    <string name="yashodhara">Yashodhara</string>
    <string name="today_workout_plan">Today Workout Plan</string>
    <string name="_6am_8am">6am-8am</string>
    <string name="categories">Categories</string>
    <string name="see_all">see all</string>
    <string name="jogging">Jogging</string>
    <string name="gym">Gym</string>
    <string name="daily_push">Daily push</string>
    <string name="fitness">Fitness</string>
    <string name="push_up">Push-up</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="don_t_have_any_account">Don\'t have any account?</string>
    <string name="sign_up_here">Sign Up here</string>
    <string name="welcome_back">WELCOME BACK,</string>
    <string name="sign_up">Sign Up</string>
    <string name="notifications">Notifications</string>
    <string name="today">Today</string>
    <string name="this_week">This Week</string>
    <string name="meal_time">Meal Time</string>
    <string name="yoga_session">Yoga Session</string>
    <string name="full_body_workout">Full Body Workout</string>
    <string name="daily_push_up">Daily Push Up</string>
    <string name="time_to_push_your_body">Time to push your body</string>
    <string name="time_to_eat_your_breakfast">Time to eat your breakfast</string>
    <string name="it_s_time_for_your_jogging_session">It\'s time for your jogging session</string>
    <string name="get_ready_for_your_yoga_routin">Get ready for your yoga routin</string>
    <string name="time_to_hit_the_gym">Time to hit the gym</string>
    <string name="aerobics">Aerobics</string>
    <string name="it_s_time_for_aerobics">It\'s time for aerobics</string>
    <string name="now">Now</string>
    <string name="_7_30_am">7.30 am</string>
    <string name="_7_00_am">7.00 am</string>
    <string name="_6_00_am">6.00 am</string>
    <string name="meet_your_coach_start_your_journey">MEET YOUR COACH, START YOUR JOURNEY</string>
    <string name="next">Next</string>
    <string name="profile">Profile</string>
    <string name="yashodhara_sandeepani">Yashodhara Sandeepani</string>
    <string name="edit_my_profile">Edit my profile</string>
    <string name="goals">Goals</string>
    <string name="nutrition">Nutrition</string>
    <string name="my_meals_foods">My meals foods</string>
    <string name="settings">Settings</string>
    <string name="help">Help</string>
    <string name="confirmation_password">Confirmation Password</string>
    <string name="if_you_have_an_account">If you have an account?</string>
    <string name="sign_in_here">Sign In here</string>
    <string name="hello_rookies">HELLO ROOKIES,</string>
    <string name="or">------------------or------------------</string>
</resources>