<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F3050817"
    android:orientation="vertical"
    android:textAlignment="center"
    tools:context=".Categories">

    <TextView
        android:id="@+id/textView41"
        android:layout_width="235dp"
        android:layout_height="wrap_content"
        android:text="@string/workout_categories"
        android:textAlignment="center"
        android:textColor="@color/blurwhite"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.528"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.092" />

    <Button
        android:id="@+id/button9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="1dp"
        android:layout_weight="1"
        android:backgroundTint="@color/gray"
        android:text="@string/advance"
        android:textSize="15sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.957"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.181" />

    <Button
        android:id="@+id/button10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="1dp"
        android:layout_weight="1"
        android:backgroundTint="@color/orange"
        android:text="@string/begineers"
        android:textColor="@color/graywhite"
        android:textSize="15sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.034"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.181" />

    <Button
        android:id="@+id/button8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:backgroundTint="@color/gray"
        android:text="@string/recomendance"
        android:textSize="15sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.515"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.181" />

    <ImageButton
        android:id="@+id/imageButton2"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_marginStart="16dp"
        android:background="@drawable/backbtn"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.038"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.093"
        tools:ignore="TouchTargetSizeCheck"
        android:contentDescription="@string/todo" />

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/imageView19"
        android:layout_width="50dp"
        android:layout_height="50dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.908"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.08"
        app:shapeAppearanceOverlay="@style/roundimageview"
        app:srcCompat="@drawable/profile" />

    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:padding="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/button8">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/imageView34"
                android:layout_width="match_parent"
                android:layout_height="209dp"
                android:paddingBottom="10dp"
                android:src="@drawable/wake" />

            <TextView
                android:id="@+id/textView70"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/wake_up_call"
                android:textAlignment="center"
                android:textColor="@color/blurwhite"
                android:textSize="20sp" />

            <ImageView
                android:id="@+id/imageView35"
                android:layout_width="match_parent"
                android:layout_height="209dp"
                android:paddingBottom="10dp"
                android:src="@drawable/lower" />

            <TextView
                android:id="@+id/textView69"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/drill_essentials"
                android:textAlignment="center"
                android:textColor="@color/blurwhite"
                android:textSize="20sp" />

            <ImageView
                android:id="@+id/imageView36"
                android:layout_width="match_parent"
                android:layout_height="209dp"
                android:paddingBottom="10dp"
                android:src="@drawable/drill" />

            <TextView
                android:id="@+id/textView71"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/full_body_goal_crusher"
                android:textAlignment="center"
                android:textColor="@color/blurwhite"
                android:textSize="20sp" />

            <ImageView
                android:id="@+id/imageView37"
                android:layout_width="match_parent"
                android:layout_height="209dp"
                android:paddingBottom="10dp"
                android:src="@drawable/crossfit" />

            <TextView
                android:id="@+id/textView72"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/lower_body_strength"
                android:textAlignment="center"
                android:textColor="@color/blurwhite"
                android:textSize="20sp" />

            <ImageView
                android:id="@+id/imageView38"
                android:layout_width="match_parent"
                android:layout_height="209dp"
                android:paddingBottom="10dp"
                android:src="@drawable/bumblebells" />

        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>